--- a/SeriousGameEngine/MainWindow.xaml
+++ b/SeriousGameEngine/MainWindow.xaml
@@ -94,11 +94,12 @@
                     <Border x:Name="Menu_Panel_Border" Background="#3D77B1" BorderBrush="#3D77B1" BorderThickness="1,1,1,1" Margin="0,00,0,0">
 
                         <StackPanel x:Name="Menu_Panel" Height="685">
-                            <Button x:Name="Button_Profilepricture" Style="{DynamicResource RoundedCornerStyle}" Height="70" Width="70" Background="White" BorderBrush="Transparent"  Foreground="#FF91BAD5" FontFamily="Arial" FontSize="14" Margin="62,70,66,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border x:Name="Button_Profilepricture" CornerRadius="4" Height="70" Width="70" Background="White" BorderBrush="Transparent" Margin="62,70,66,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Label x:Name="Text_Username" Height="30" Background="#00000000" BorderBrush="#00000000" Foreground="White" FontFamily="Sinkin Sans 600 SemiBold" Content="Max Mustermann" Margin="5,5,5,50" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            <Button x:Name="Button_Homescreen" Style="{DynamicResource RoundedCornerStyle}" Height="40" Background="Transparent" BorderBrush="Transparent" Foreground="White" FontFamily="Sinkin Sans 200 X Light" FontSize="16" Content="Startseite" Margin="20,0,0,0" HorizontalAlignment="Left" Click="Button_Homescreen_Click"/>
-                            <Button x:Name="Button_Settings" Style="{DynamicResource RoundedCornerStyle}" Height="40" Background="Transparent" BorderBrush="Transparent"  Foreground="White" FontFamily="Sinkin Sans 200 X Light" FontSize="16" Content="Einstellungen" Margin="20,0,0,0" HorizontalAlignment="Left" Click="Button_Settings_Click"/>
-                            <Button x:Name="Button_Profil" Style="{DynamicResource RoundedCornerStyle}" Height="40" Background="Transparent" BorderBrush="Transparent" Foreground="White" FontFamily="Sinkin Sans 200 X Light" FontSize="16" Content="Benutzerkonto" Margin="20,0,0,0" HorizontalAlignment="Left" Click="Button_Profil_Click"/>
+                            <StackPanel x:Name="SideboardButtons">
+                                
+                            </StackPanel>
+
                             <Image x:Name="Img_Menu_Logout" Source="Resource/Logout.png" VerticalAlignment="Bottom" HorizontalAlignment="Left" Height="45" Width="45" Margin="8,225,0,5"></Image>
                         </StackPanel>
 
@@ -160,7 +161,7 @@
 
                             <Border x:Name="Button_NewGameBorder" BorderThickness="2" DockPanel.Dock="Top" Background="Transparent" BorderBrush="#3D77B1" Width="250" Height="40" CornerRadius="8" HorizontalAlignment="Left">
                                 <Grid x:Name="Button_NewGameGrid" Width="250" Height="40" VerticalAlignment="Center" HorizontalAlignment="Left" >
-                                    
+
                                 </Grid>
                             </Border>
 
@@ -185,10 +186,8 @@
                                     </StackPanel>
                                 </ScrollViewer>
                             </Border>
+                            
                         </DockPanel>
-
-
-
                     </Grid>
 
                     <Grid x:Name="Grid_Subjectscreen">
