--- a/SeriousGameEngine/MainWindow.xaml
+++ b/SeriousGameEngine/MainWindow.xaml
@@ -110,7 +110,7 @@
                     <Image Source="Resource/Menu.png" HorizontalAlignment="Center" Height="40" Width="40" Margin="0,0,0,0"/>
                     <Border x:Name="Menu_Panel_BorderSmall" Background="#3D77B1" BorderBrush="#3D77B1" BorderThickness="1,1,1,1" Margin="0,0,0,0" Height="656">
                         <StackPanel x:Name="Menu_PanelSmall" Margin="0" Background="Transparent">
-                            <Button x:Name="Button_ProfileprictureSmall" Style="{DynamicResource RoundedCornerStyle}" Height="50" Width="56" Background="White" BorderBrush="Transparent"  Foreground="White" FontFamily="Arial" FontSize="14" Margin="5,80,5,0" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
+                            <Border x:Name="Button_ProfileprictureSmall" CornerRadius="4" Height="50" Width="50" Background="White" BorderBrush="Transparent" Margin="5,80,5,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <Button x:Name="Button_HomescreenSmall" Style="{DynamicResource RoundedCornerStyle}" Height="40" Margin="0,80,0,0" HorizontalAlignment="Center" Click="Button_Homescreen_Click" VerticalAlignment="Center" Width="40" Background="Transparent"
                                     Foreground="Transparent" BorderBrush="Transparent">
                                 <Image Source="Resource/Homescreen.png" HorizontalAlignment="Center" VerticalAlignment="Center" Width="36" Height="36" Margin="0"/>
